fixed the overflow problem in x axis

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -8,13 +8,15 @@
     box-sizing: border-box;
 }
 
-html {
+html,
+body {
     background-color: white;
     color: rgb(51, 51, 51);
     font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: 300;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 .clearfix {zoom: 1;}
